Fix the section dividers height overlapping

--- a/css/main.css
+++ b/css/main.css
@@ -121,7 +121,7 @@ header{
     background-position: center;
     
     padding: 250px 0;
-    padding-bottom: 550px;
+    padding-bottom: 40vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -268,7 +268,7 @@ header{
 .features{
     min-height: 100vh;
     background-color: var(--tinted-gray);
-    padding-top: 400px;
+    padding-top: 40vh;
 }
 
     .features .text-part{
